Use the package "resolved" field to determine if a package has changed. Only treat git packages as having changed when their resolved hash changes.

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "standard": "^6.0.4",
     "tape": "^4.2.0"
+  },
+  "dependencies": {
+    "npm-package-arg": "^4.1.0"
   }
 }
