--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "bin": "bin/shrinkwrap-changelog.js",
   "main": "index.js",
   "scripts": {
-    "test": "standard && tape test/*.js"
+    "lint": "standard",
+    "test": "tape test/*.js",
+    "ci": "npm run lint && npm test"
   },
   "repository": {
     "type": "git",
@@ -14,12 +16,14 @@
   "author": "Andrew Hutchings <andrew.hutchings@gmail.com> (http://andrewhutchings.com)",
   "license": "ISC",
   "devDependencies": {
+    "proxyquire": "^1.7.4",
     "standard": "^6.0.4",
     "tape": "^4.2.0"
   },
   "dependencies": {
     "bluebird": "^3.3.0",
     "child-process-promise": "^1.1.0",
+    "node-fetch": "^1.3.3",
     "npm-package-arg": "^4.1.0"
   },
   "keywords": [
