--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "https://github.com/ahutchings/shrinkwrap-changelog.git"
   },
-  "author": "Andrew Hutchings <andrew.hutchings@gmail.com> (http://andrewhutchings.com)",
+  "author": "Andrew Hutchings <andrew.hutchings@gmail.com> (https://andrewhutchings.com)",
   "license": "ISC",
   "devDependencies": {
     "proxyquire": "^1.7.4",
