--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard",
-    "test": "tape test/*.js",
-    "ci": "npm run lint && npm test"
+    "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
